prevent toc from overflowing column when floating

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -1840,7 +1840,8 @@ body.guide {
   }
   #sidebar {
     @include border-box;
-    padding: 1em $gridGutterWidth 0 0;
+    //padding: 1em $gridGutterWidth 0 0;
+    padding: 1em 10px 0 0;
     @include span(3);
     h3 {
       font-family: $default_font_family;
